added first blog & removed family page

--- a/about.html
+++ b/about.html
@@ -31,9 +31,11 @@
                     <li class="navbar-item">
                         <a class="nav-link" href="blog.html">Blog</a>
                     </li>
-                    <li class="navbar-item">
+                    <!-- family blog link
+                        <li class="navbar-item">
                         <a class="nav-link" href="family.html">Family</a>
                     </li>
+                    -->
                 </ul>
             </div>
         </nav>
