--- a/blog.html
+++ b/blog.html
@@ -30,9 +30,11 @@
                     <li class="navbar-item">
                         <a class="nav-link" href="blog.html">Blog</a>
                     </li>
-                    <li class="navbar-item">
+                    <!-- family blog link
+                        <li class="navbar-item">
                         <a class="nav-link" href="family.html">Family</a>
                     </li>
+                    -->
                 </ul>
             </div>
         </nav>
@@ -46,35 +48,35 @@
             </div>
             <div class="row">
                 <div class="col-sm-8" id="theblog">
-                    <H3 class="text-center">The Kite Incident</H3>
-                    <p class="text-center" id="blogtext">The other day I decided to purchase a kite off of Amazon. I thought, I loved flying kites as a kid and how cool would it be to teach my kids how to fly one. It’s been windy for the past 
-                        month maybe 2. Every day the wind howls my kids toys in the back yard scatter across the backyard. The cushions and some of the furniture on my patio fly in the air some in the street on the other backside 
-                        wall. I decided to make the best of a windy situation and buy the kite. A couple days later I get the package.  Kids see that its here and they are super excited (Me too!!). Its been
-                        quite a while since I’ve flown a kite literally close to 20 years.😳😳 YIKES!  So the day finally comes its been windy every day. How could it possibly not be the day I told the kids we would go…………WELL……..
-                        The day started out great. We all wake up the winds blow amount. Kids as well as Pops super excited. My oldest has pre-school couple hours a couple days a week so we planned to go to the park on the way home
-                        from school. We get to the park kids fighting and arguing who gets to do shit first you know the usual.  Kites brand new so I take it out of the package and try putting it together. Kids are trying to help…..
-                        NOT HELPING. Not only that the wind is blowing the case and the package all over the field. I’m tryin to get the kids to hold stuff and now they’re fighting over who gets to hold stuff! Aahhhhh I grab them and 
-                        shove them in my pocket. All while trying to hold down  the kite pieces that are trying to blow away.  Finally the time has come. I have the kite together string attached and the kids and I are ready to fly.
-                        But the wind, you know  good old mother nature had other plans. It just stopped. I mean nothing. It was sad! The kids cried, I cried so we played on the jungle gym and went about our day. 
+                    <H3 class="text-center">My First Blog</H3>
+                    <p class="text-center" id="blogtext">Hello world, My name is Andrew and this is my first blog.  I recently decided 
+                        to start a blog about being a dad.  Something I could turn to to express my feelings, experiences, and just every
+                         day activities that I go through being a dad. As a dad most people look at you as the macho man. The one who’s 
+                         supposed to teach you how to be rough, tough, wipe the dirt off, no crying, hard knocks type of stuff.
+                           I can tell you first hand that being a dad is waaaaayy more intense.  Not only is it the most exciting, 
+                           fun, gratifying thing I have ever done.  It is also the most exhausting, draining, frustrating thing in 
+                           the world!  I have gone from thinking I’m doing every thing right to everything wrong in a matter of minutes. 
+                           Before I get into the in’s and out’s of my life let me tell you a little bit about myself.  Im a 32 years old 
+                           loving husband and father of 3.   I have a boy my oldest Aspen. He is 5 and a half and has more energy than God 
+                           put on this planet.   He likes to solve puzzles, play catch, camp, and pretty much anything that has to do with 
+                           his dad. I also have two little girls.  Autumn and AJ are 3 and a half year old identical twins. They are their 
+                           own Ying and Yang as well as  their dads whole heart. Autumn is the shy, sweet, ill melt your heart type of gal.  
+                           AJ is the sneaky, I know how to get what I want, I love you type of gal. Then there is the Mrs.  she is the real MVP.  
+                           Not only does she have to help raise these 3 crazy kids but put up with my shenanigans at the same time. Im sure 
+                           we will dig a bit deeper into all of our personality’s as I continue to update and add new content.  I currently 
+                           am a Busser at a restaurant in Las Vegas NV.   I like to stay active as well as keep my kids active as fitness and 
+                           eating healthy is a big and important part of life. In this blog I will be bringing you guys along with me on this 
+                           journey they call father hood. From the ups, downs, ins and outs, the good days, bad days, and everything in-between. 
+                            <button class="btn btn-link" aria-expanded="false" area-controls="blogtext" data-toggle="collapse" data-target="#blogtext" id="linkgone"></button>
 
-                            2 Weeks later
-                            <button class="btn btn-link" aria-expanded="false" area-controls="blogtext" data-toggle="collapse" data-target="#blogtext" id="linkgone">Read More....</button>
-
-                        <p class="collapse" id="blogtext">So the wind just left. I mean super windy every day for a month or so I finally get the kite we get it out there and nothing. Mother Nature said I need a break iv been blowing things all month… SLUT.
-                        Anyways its about 2 weeks later its HOT now. I get the kids all geared up to play in there little pool in the back yard. The sounds burning hot waters freezing cold. I start putting the canopy up to block
-                        the sound and its trying to blow away. I like What the Fuck yo. Then Aspen goes “Man it’s windy enough for the kite”. Im like Lets ride. They of course were bolting for the door. So we got ready wind still
-                        blowing and all. As soon as we got to the park. Dead. It just stopped, then out of nowhere it would gust up like it was teasing me. The kite would start to go up  and then just stall. And mock me as it slows
-                        lowered to the ground. I would run back and fourth trying to get this kite to get up and as soon as I thought it was up and flying….. Slowly it would just fall back down to earth.  Slowly one by one my kids 
-                        gave up on me. Dad can we just go play at the park, Dad its hot, Dad can we go home! They trickled away  like the sweat running down my face. I couldnt give up. There was no way I came to the park twice and was 
-                        punked by mother nature. Back and fourth I ran from left to right East to West. Nothing…. I lay there defeated out of breath dripping sweat. I took a deep breath tucked my pride in my pocket…. Lets go home and get pizza. 
-                        As I sit at home with a cold beer in my hand and my feet in the water. Till we meet agian mother nature thanks for the cardio!
+                        <p class="collapse" id="blogtext">
                      </p>
                 </div>
                 <div class="col">
                     <div class="row  text-center d-block align-content-center" id="blogs">
                         <h3>Blogs</h3>
                         <ol>
-                            <li>the first blog</li>
+                            <li>My First Blog</li>
                             <li>the second</li>
                             <li> the third</li>
                             <li> the fourth</li>
