--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
                     <li class="navbar-item">
                         <a class="nav-link" href="blog.html">Blog</a>
                     </li>
-                    <li class="navbar-item">
+                    <!-- family blog link
+                        <li class="navbar-item">
                         <a class="nav-link" href="family.html">Family</a>
                     </li>
+                    -->
                 </ul>
             </div>
         </nav>
@@ -49,10 +51,11 @@
             <div class="row d-flex justify-content-center">
                 <div class="col-sm-11 col-md-8" id="blog">
                     <h2 class="text-center" id="center">Blog</h2>
-                    <p class="text-center" id="center">The other day I decided to purchase a kite off of Amazon. I thought, I loved flying kites as a kid and how cool would it be to teach my kids how to fly one. It’s been windy for the past 
-                        month maybe 2. Every day the wind howls my kids toys in the back yard scatter across the backyard. The cushions and some of the furniture on my patio fly in the air some in the street on the other backside 
-                        wall. I decided to make the best of a windy situation and buy the kite. A couple days later I get the package.  Kids see that its here and they are super excited (Me too!!). Its been
-                        quite a while since I’ve flown a kite literally close to 20 years.😳😳 YIKES!  So the day finally comes its been windy every day. How could it possibly not be the day I told the kids we would go…………WELL……..<br>
+                    <p class="text-center" id="center">Hello world, My name is Andrew and this is my first blog.  I recently decided 
+                        to start a blog about being a dad.  Something I could turn to to express my feelings, experiences, and just every
+                         day activities that I go through being a dad. As a dad most people look at you as the macho man. The one who’s 
+                         supposed to teach you how to be rough, tough, wipe the dirt off, no crying, hard knocks type of stuff.
+                           I can tell you first hand that being a dad is waaaaayy more intense. <br>
                         <a class="mx-auto" href="blog.html">Read More....</a></p>
                 </div>
                 <div class="col" id="detaildiv">
