changed offset of p in aboutme

--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
               </div>              
           </div>
           <div class="row">
-            <div class="col offset-sm-4">
+            <div class="col offset-sm-3 text-center">
                 <p>I'm a 32yr old Loving husband and father of 3. On my free time I like to stay active. I have a pretty 
                     good workout Routine 5-6 days a week as well as trying to keep my kids active with hikes and trips to
                      the park. I currently work a full time job at a resturant while trying to learn computer programming 
