centered about me img and <p>

--- a/about.html
+++ b/about.html
@@ -49,13 +49,13 @@
       <div class="container-fluid">
           <div class="row justify-content-center">
             
-              <div class="col offset-sm-3">
-                <img src="../Father-Figure/Resources/Images/pic of me.jpeg" alt="picture of dad and Aspen" id="aboutmeimg2">
+              <div class="col-sm-12 m-auto">
+                <img src="../Father-Figure/Resources/Images/pic of me.jpeg" alt="picture of dad and Aspen"  class="mx-auto d-block"id="aboutmeimg2">
               </div>              
           </div>
           <div class="row">
-            <div class="col offset-sm-3 text-center">
-                <p>I'm a 32yr old Loving husband and father of 3. On my free time I like to stay active. I have a pretty 
+            <div class="col-sm-12 text-center">
+                <p id="aboutmep2" class="mx-auto d-block">I'm a 32yr old Loving husband and father of 3. On my free time I like to stay active. I have a pretty 
                     good workout Routine 5-6 days a week as well as trying to keep my kids active with hikes and trips to
                      the park. I currently work a full time job at a resturant while trying to learn computer programming 
                      skills to further persue a new career as well a hobby I enjoy.</p>
