changed title and about me to about us

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Pattaya&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fuggles&display=swap" rel="stylesheet">
 </head>
   <body>
 
@@ -20,7 +23,7 @@
 
     <header>
         <nav class="navbar-light bg-light navbar navbar-expand-sm">
-            <span class="navbar-brand mb-0 h1">Father Figure</span>
+            <span class="navbar-brand mb-0 h1">The Little Things</span>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="#navbar" aria-expanded="false" aria-label="toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -30,7 +33,7 @@
                         <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="navbar-item">
-                        <a class="nav-link" href="about.html">About Me</a>
+                        <a class="nav-link" href="about.html">About Us</a>
                     </li>
                     <li class="navbar-item">
                         <a class="nav-link" href="blog.html">Blog</a>
