--- a/blog.html
+++ b/blog.html
@@ -25,7 +25,7 @@
                         <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="navbar-item">
-                        <a class="nav-link" href="about.html">About Me</a>
+                        <a class="nav-link" href="about.html">About Us</a>
                     </li>
                     <li class="navbar-item">
                         <a class="nav-link" href="blog.html">Blog</a>
