changed title on all pages

--- a/blog.html
+++ b/blog.html
@@ -10,12 +10,15 @@
     <link rel="stylesheet" href="../Father-Figure/CSS/index.css">
     <script src="https://kit.fontawesome.com/a6f6a3d697.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fuggles&display=swap" rel="stylesheet">
   </head>
   <body>
       <!--header section-->
       <header>
         <nav class="navbar-light bg-light navbar navbar-expand-sm">
-            <span class="navbar-brand mb-0 h1">Father Figure</span>
+            <span class="navbar-brand mb-0">The Little Things</span>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="#navbar" aria-expanded="false" aria-label="toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
