--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <header>
         <nav class="navbar-light bg-light navbar navbar-expand-sm">
-            <span class="navbar-brand mb-0">The Little Things</span>
+            <h1 class="navbar-brand mb-0" id="nav-bartitle">The Little Things</h1>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="#navbar" aria-expanded="false" aria-label="toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
