fixed body postion for enlarged header

--- a/blog.html
+++ b/blog.html
@@ -18,7 +18,7 @@
       <!--header section-->
       <header>
         <nav class="navbar-light bg-light navbar navbar-expand-sm">
-            <span class="navbar-brand mb-0">The Little Things</span>
+            <span class="navbar-brand mb-0" id="nav-bartitle">The Little Things</span>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="#navbar" aria-expanded="false" aria-label="toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -31,7 +31,7 @@
                         <a class="nav-link" href="about.html">About Us</a>
                     </li>
                     <li class="navbar-item">
-                        <a class="nav-link" href="blog.html">Blog</a>
+                        <a class="nav-link" href="blog.html">Blogs</a>
                     </li>
                     <!-- family blog link
                         <li class="navbar-item">
