--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Father Figure</title>
+    <title>The Little</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -36,7 +36,7 @@
                         <a class="nav-link" href="about.html">About Us</a>
                     </li>
                     <li class="navbar-item">
-                        <a class="nav-link" href="blog.html">Blog</a>
+                        <a class="nav-link" href="blog.html">Blogs</a>
                     </li>
                     <!-- family blog link
                         <li class="navbar-item">
@@ -144,7 +144,7 @@
             
                 <div class="row">
                     <div class="col text-left">
-                        <p>&copy; Father Figure</p>
+                        <p>&copy; The Little Things</p>
                     </div>
                     <div class="col text-right">
                             <a href="https://www.facebook.com/andrew.little.98" target="_blank"><i class="fa fa-facebook fa-2x"></i> </a>
