--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 
      <header>
         <nav class="navbar-light bg-light navbar navbar-expand-sm">
-            <span class="navbar-brand mb-0">The Little Things</span>
+            <span class="navbar-brand mb-0" id="nav-bartitle">The Little Things</span>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="#navbar" aria-expanded="false" aria-label="toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -32,7 +32,7 @@
                         <a class="nav-link" href="about.html">About Us</a>
                     </li>
                     <li class="navbar-item">
-                        <a class="nav-link" href="blog.html">Blog</a>
+                        <a class="nav-link" href="blog.html">Blogs</a>
                     </li>
                     <!-- family blog link
                         <li class="navbar-item">
@@ -44,6 +44,7 @@
         </nav>
     </header>
     <!--main section-->
+    <main id="mainbody">
       <div class="jumbotron jumbotron-fluid" id="mainabout2">
           <h1 class="display-4" id="aboutmetitle">About Us</h1>
           
