changed about me and edited a lot of pictures/div

--- a/about.html
+++ b/about.html
@@ -18,8 +18,8 @@
      <!--header section-->
 
      <header>
-        <nav class="navbar-light bg-light navbar navbar-expand-sm">
-            <span class="navbar-brand mb-0" id="nav-bartitle">The Little Things</span>
+        <nav class="navbar-light bg-light navbar navbar-expand-sm" id="headerHeigth">
+            <span class="navbar-brand mb-0" id="nav-bartitle">Father Figure</span>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="#navbar" aria-expanded="false" aria-label="toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -29,7 +29,7 @@
                         <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="navbar-item">
-                        <a class="nav-link" href="about.html">About Us</a>
+                        <a class="nav-link" href="about.html">About Me</a>
                     </li>
                     <li class="navbar-item">
                         <a class="nav-link" href="blog.html">Blogs</a>
@@ -46,7 +46,7 @@
     <!--main section-->
     <main id="mainbody">
       <div class="jumbotron jumbotron-fluid" id="mainabout2">
-          <h1 class="display-4" id="aboutmetitle">About Us</h1>
+          <h1 class="display-4" id="aboutmetitle">About Me</h1>
           
       </div>
 
