--- a/blog.html
+++ b/blog.html
@@ -17,8 +17,8 @@
   <body>
       <!--header section-->
       <header>
-        <nav class="navbar-light bg-light navbar navbar-expand-sm">
-            <span class="navbar-brand mb-0" id="nav-bartitle">The Little Things</span>
+        <nav class="navbar-light bg-light navbar navbar-expand-sm" id="headerHeigth">
+            <span class="navbar-brand mb-0" id="nav-bartitle">Father Figure</span>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="#navbar" aria-expanded="false" aria-label="toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -28,7 +28,7 @@
                         <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="navbar-item">
-                        <a class="nav-link" href="about.html">About Us</a>
+                        <a class="nav-link" href="about.html">About Me</a>
                     </li>
                     <li class="navbar-item">
                         <a class="nav-link" href="blog.html">Blogs</a>
@@ -47,11 +47,11 @@
     <main id="mainblog">
         <div class="container-fluid" id="blogpagediv">
             <div class="row text-center" id="blogpage">
-                <h1 class="w-100 ">The Blogs</h1>
+                <h1 class="w-100 " id="blogtitle">The Blogs</h1>
             </div>
             <div class="row">
                 <div class="col-sm-8" id="theblog">
-                    <H3 class="text-center">My First Blog</H3>
+                    <H3 class="text-center" id="blogtitle">My First Blog</H3>
                     <p class="text-center" id="blogtext">Hello world, My name is Andrew and this is my first blog.  I recently decided 
                         to start a blog about being a dad.  Something I could turn to to express my feelings, experiences, and just every
                          day activities that I go through being a dad. As a dad most people look at you as the macho man. The one who’s 
@@ -77,9 +77,9 @@
                 </div>
                 <div class="col">
                     <div class="row  text-center d-block align-content-center" id="blogs">
-                        <h3>Blogs</h3>
+                        <h3 id="titlefont">Blogs</h3>
                         <ol>
-                            <li>My First Blog</li>
+                            <li><a href="index.html" id="">The Perfect Braid</a></li>
                             <li>the second</li>
                             <li> the third</li>
                             <li> the fourth</li>
@@ -87,7 +87,7 @@
                         </ol>
                     </div>
                     <div class="row text-center d-block align-content-center" id="dadtime2">
-                        <h3>Dad Time</h3>
+                        <h3 id="titlefont">The Line Up</h3>
                         <ol>
                             <li>the first blog</li>
                             <li>the second</li>
