--- a/family.html
+++ b/family.html
@@ -18,7 +18,7 @@
       <!--Header section-->
     <header>
         <nav class="navbar-light bg-light navbar navbar-expand-sm">
-            <span class="navbar-brand mb-0" id="nav-bartitle">The Little Things</span>
+            <span class="navbar-brand mb-0" id="nav-bartitle">Father Figure</span>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="#navbar" aria-expanded="false" aria-label="toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -28,7 +28,7 @@
                         <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="navbar-item">
-                        <a class="nav-link" href="about.html">About Us</a>
+                        <a class="nav-link" href="about.html">About Me</a>
                     </li>
                     <li class="navbar-item">
                         <a class="nav-link" href="blog.html">Blogs</a>
