made titte a link

--- a/blog.html
+++ b/blog.html
@@ -18,7 +18,7 @@
       <!--header section-->
       <header>
         <nav class="navbar-light bg-light navbar navbar-expand-sm" id="headerHeigth">
-            <span class="navbar-brand mb-0" id="nav-bartitle">Father Figure</span>
+            <span class="navbar-brand mb-0" id="nav-bartitle"><a id="titlecolor" href="index.html">Father Figure</a></span>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="#navbar" aria-expanded="false" aria-label="toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
