--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <!--Weekly Activities -->
         <div class="container-fluid">
             <div class="row">
-                <div class="col-sm-4 col-md-8 mx-auto" id="detaildiv">
+                <div class=" col-lg-4 mx-auto" id="detaildiv">
                     <div class="row d-flex justify-content-center" id="activities">
                         <h3  class="text-center display-2 w-100"><button class="btn btn-link btn-lg text-white" aria-expanded="false" area-controls="daily-activities" data-toggle="collapse" data-target="#daily-activities">Weekly Activities</button></h3>
                         <ul class="collapse" id="daily-activities">
@@ -99,7 +99,7 @@
                     </div>
                 </div>
                     <!--Snacks -->
-                <div class="col-sm-4 col-md-8 mx-auto" id="detaildiv">
+                <div class=" col-lg-4 mx-auto" id="detaildiv">
                     <div class="row d-flex justify-content-center" id="healthysnacks">
                         <h3 class="text-center display-2 w-100" ><button class="btn btn-link btn-lg text-white" aria-expanded="flase" area-controls="Healthysnacks" data-toggle="collapse" data-target="#Healthysnacks">Snacks</button></h3>
                         <ul class="collapse" id="Healthysnacks">
@@ -110,7 +110,7 @@
                     </div>  
                 </div>
                     <!--Things to look for in a park (Personal opinion )-->
-                <div class="col-sm-4 col-md-8 mx-auto" id="detaildiv">
+                <div class=" col-lg-4 mx-auto" id="detaildiv">
                     <div class="row d-flex justify-content-center" id="parks">
                         <h2 class="text-center display-2 w-100"><button class="btn btn-link btn-lg text-white" aria-expanded="flase" area-controls="parkdetails" data-toggle="collapse" data-target="#mainLI">Parks Details</button></h2>
                         <ul class="collapse" id="mainLI">
@@ -126,7 +126,7 @@
         </div> 
         <!--carousel section-->
         <!--Pictures of the Weekly activity -->
-        <div id="my-carousel" class="carousel slide" data-ride="carousel">
+        <div id="my-carousel" class="carousel slide my-4" data-ride="carousel">
             <div class="carousel-inner" id="mycarouselimg">
                 <div class="carousel-item active">
                     <img class="d-block w-100" src="../Father-Figure/Resources/Images/kids/IMG_0242.jpeg" alt="Kids at Red Rock Pool">
@@ -159,7 +159,9 @@
             <div class="row" id="secondrow">
                 <div class="col-md-6" id="dadtime">
                     <h3 class="text-center" id="blogtitle">Weekly Activity</h3>
-                    <p class="text-center w-100" id="dadtimeP">One of the weekly activities in detial.</p>
+                    <p class="text-center w-100" id="dadtimeP">I like to do a kind random weekly activity once a week.  Wether its something the kids picked, a suggestion from a friend, or just something
+                        I thought up off the top of my head. Usually I try to make it something diffrent from the norm and outside preferably away from the house!
+                    </p>
                     
                 </div>
                 <div class="col" id="whyblog">
