--- a/index.html
+++ b/index.html
@@ -126,32 +126,34 @@
         </div> 
         <!--carousel section-->
         <!--Pictures of the Weekly activity -->
-        <div id="my-carousel" class="carousel slide my-4" data-ride="carousel">
-            <div class="carousel-inner" id="mycarouselimg">
-                <div class="carousel-item active">
-                    <img class="d-block w-100" src="../Father-Figure/Resources/Images/kids/IMG_0242.jpeg" alt="Kids at Red Rock Pool">
+        <div class="container">
+            <div id="my-carousel" class="carousel slide my-4" data-ride="carousel">
+                <div class="carousel-inner" id="mycarouselimg">
+                    <div class="carousel-item active">
+                        <img class="d-block w-100" src="./Resources/Images/kids/IMG_0242.jpeg" alt="Kids at Red Rock Pool">
+                    </div>
+                
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="./Resources/Images/kids/IMG_1163.jpeg" alt="walking on train tracks">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="./Resources/Images/kids/IMG_1678.jpeg" alt="At top mountians edge">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="./Resources/Images/kids/IMG_1762.jpeg" alt="kids eating at park">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block  w-100" src="./Resources/Images/kids/IMG_9028.jpeg" alt="kids Eating snacks at grass">
+                    </div>
+                    <a class="carousel-control-prev" href="#my-carousel" data-slide="prev" role="button">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#my-carousel" data-slide="next" role="button">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>    
                 </div>
-            
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="../Father-Figure/Resources/Images/kids/IMG_1163.jpeg" alt="walking on train tracks">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="../Father-Figure/Resources/Images/kids/IMG_1678.jpeg" alt="At top mountians edge">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="../Father-Figure/Resources/Images/kids/IMG_1762.jpeg" alt="kids eating at park">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block  w-100" src="../Father-Figure/Resources/Images/kids/IMG_9028.jpeg" alt="kids Eating snacks at grass">
-                </div>
-                <a class="carousel-control-prev" href="#my-carousel" data-slide="prev" role="button">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#my-carousel" data-slide="next" role="button">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>    
             </div>
         </div>
 
