--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <script src="https://kit.fontawesome.com/a6f6a3d697.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="../Father-Figure/CSS/index.css">
+    <link rel="stylesheet" href="./CSS/about.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fuggles&display=swap" rel="stylesheet">
@@ -54,7 +54,7 @@
           <div class="row justify-content-center">
             
               <div class="col-sm-12 m-auto">
-                <img src="../Father-Figure/Resources/Images/pic of me.jpeg" alt="picture of dad and Aspen"  class="mx-auto d-block"id="aboutmeimg2">
+                <img src="./Resources/Images/pic of me.jpeg" alt="picture of dad and Aspen"  class="mx-auto d-block"id="aboutmeimg2">
               </div>              
           </div>
           <div class="row">
