--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="../Father-Figure/CSS/index.css">
+    <link rel="stylesheet" href="./CSS/blog.css">
     <script src="https://kit.fontawesome.com/a6f6a3d697.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -47,11 +47,11 @@
     <main id="mainblog">
         <div class="container-fluid" id="blogpagediv">
             <div class="row text-center" id="blogpage">
-                <h1 class="w-100 " id="blogtitle">The Blogs</h1>
+                <h1 class="w-100 " id="titlefont">The Blogs</h1>
             </div>
             <div class="row">
                 <div class="col-sm-8" id="theblog">
-                    <H3 class="text-center" id="blogtitle">My First Blog</H3>
+                    <H3 class="text-center blogtitle" id="titlefont">My First Blog</H3>
                     <p class="text-center" id="blogtext">Hello world, My name is Andrew and this is my first blog.  I recently decided 
                         to start a blog about being a dad.  Something I could turn to to express my feelings, experiences, and just every
                          day activities that I go through being a dad. As a dad most people look at you as the macho man. The one who’s 
@@ -69,27 +69,23 @@
                            we will dig a bit deeper into all of our personality’s as I continue to update and add new content.  I currently 
                            am a Busser at a restaurant in Las Vegas NV.   I like to stay active as well as keep my kids active as fitness and 
                            eating healthy is a big and important part of life. In this blog I will be bringing you guys along with me on this 
-                           journey they call father hood. From the ups, downs, ins and outs, the good days, bad days, and everything in-between. 
-                            <button class="btn btn-link" aria-expanded="false" area-controls="blogtext" data-toggle="collapse" data-target="#blogtext" id="linkgone"></button>
-
-                        <p class="collapse" id="blogtext">
-                     </p>
+                           journey they call father hood. From the ups, downs, ins and outs, the good days, bad days, and everything in-between.</p>
                 </div>
                 <div class="col">
                     <div class="row  text-center d-block align-content-center" id="blogs">
                         <h3 id="titlefont">Blogs</h3>
                         <ol>
-                            <li><a href="index.html" id="">The Perfect Braid</a></li>
-                            <li>the second</li>
+                            <li id="firstBlog">My First Blog</li>
+                            <li id="perfectBraid">The Perfect Braid</li>
                             <li> the third</li>
                             <li> the fourth</li>
                             <li>the fith</li>
                         </ol>
                     </div>
-                    <div class="row text-center d-block align-content-center" id="dadtime2">
+                    <div class="row text-center d-block align-content-center" id="theLineUp">
                         <h3 id="titlefont">The Line Up</h3>
                         <ol>
-                            <li>the first blog</li>
+                            <li>StarTrain</li>
                             <li>the second</li>
                             <li> the third</li>
                             <li> the fourth</li>
@@ -119,6 +115,7 @@
             </div>
         </footer>  
     </main>
+    <script src="./JS/blog.js"></script>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
