--- a/family.html
+++ b/family.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <script src="https://kit.fontawesome.com/a6f6a3d697.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="../Father-Figure/CSS/index.css">
+    <link rel="stylesheet" href="./CSS/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fuggles&display=swap" rel="stylesheet">
@@ -51,7 +51,7 @@
             <div class="row">
                 <div class="col">
                     <div class="card shadow p-3 mb-5 bg-black rounded" >
-                        <img src="../Father-Figure/Resources/Images/ROQJ7611.jpeg" alt="pic of Andy" class="card-img-top">
+                        <img src="./Resources/Images/ROQJ7611.jpeg" alt="pic of Andy" class="card-img-top">
                     </div>
                     <div class="card-body text-center">
                         <h5>Dad</h5>
@@ -60,7 +60,7 @@
                 </div>
                 <div class="col">
                     <div class="card shadow p-3 mb-5 bg-black rounded">
-                        <img src="../Father-Figure/Resources/Images/Sid.jpeg" alt="pic of Sid" class="card-img-top">
+                        <img src="./Resources/Images/Sid.jpeg" alt="pic of Sid" class="card-img-top">
                     </div>
                     <div class="card-body text-center">
                         <h5>Mom</h5>
@@ -71,7 +71,7 @@
             <div class="row ">
                 <div class="col">
                     <div class="card shadow p-3 mb-5 bg-black ">
-                        <img src="../Father-Figure/Resources/Images/Asepn.jpeg" alt="pic of Aspen" class="card-img-top" style="height: 350px;">
+                        <img src="./Resources/Images/Asepn.jpeg" alt="pic of Aspen" class="card-img-top" style="height: 350px;">
                     </div>
                     <div class="card-body text-center">
                         <h5>Aspen</h5>
@@ -80,7 +80,7 @@
                 </div>
                 <div class="col">
                     <div class="card shadow p-3 mb-5 bg-black ">
-                        <img src="../Father-Figure/Resources/Images/Autumn.JPG" alt="pic of Autumn" class="card-img-top" style="height: 350px;">
+                        <img src="./Resources/Images/Autumn.JPG" alt="pic of Autumn" class="card-img-top" style="height: 350px;">
                     </div>
                     <div class="card-body text-center">
                         <h5>Autumn</h5>
@@ -89,7 +89,7 @@
                 </div>
                 <div class="col">
                     <div class="card shadow p-3 mb-5 bg-black ">
-                        <img src="../Father-Figure/Resources/Images/AJ.JPG" alt="pic of AJ" class="card-img-top" style="height: 350px;">
+                        <img src="./Resources/Images/AJ.JPG" alt="pic of AJ" class="card-img-top" style="height: 350px;">
                     </div>
                     <div class="card-body text-center">
                         <h5>A.J.</h5>
