--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <script src="https://kit.fontawesome.com/a6f6a3d697.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="../Father-Figure/CSS/index.css">
+    <link rel="stylesheet" href="./CSS/index.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Pattaya&display=swap" rel="stylesheet">
@@ -86,7 +86,7 @@
         
                 <!--Weekly Activities -->
         <div class="container-fluid">
-            <div class="row">
+        <!--    <div class="row">
                 <div class=" col-lg-4 mx-auto" id="detaildiv">
                     <div class="row d-flex justify-content-center" id="activities">
                         <h3  class="text-center display-2 w-100"><button class="btn btn-link btn-lg text-white" aria-expanded="false" area-controls="daily-activities" data-toggle="collapse" data-target="#daily-activities">Weekly Activities</button></h3>
@@ -97,9 +97,9 @@
                             <li>Art and Crafts</li>
                         </ul>
                     </div>
-                </div>
+                </div>-->
                     <!--Snacks -->
-                <div class=" col-lg-4 mx-auto" id="detaildiv">
+                <!--<div class=" col-lg-4 mx-auto" id="detaildiv">
                     <div class="row d-flex justify-content-center" id="healthysnacks">
                         <h3 class="text-center display-2 w-100" ><button class="btn btn-link btn-lg text-white" aria-expanded="flase" area-controls="Healthysnacks" data-toggle="collapse" data-target="#Healthysnacks">Snacks</button></h3>
                         <ul class="collapse" id="Healthysnacks">
@@ -108,9 +108,9 @@
                             <li>oats</li>
                         </ul>
                     </div>  
-                </div>
+                </div>-->
                     <!--Things to look for in a park (Personal opinion )-->
-                <div class=" col-lg-4 mx-auto" id="detaildiv">
+                <!--<div class=" col-lg-4 mx-auto" id="detaildiv">
                     <div class="row d-flex justify-content-center" id="parks">
                         <h2 class="text-center display-2 w-100"><button class="btn btn-link btn-lg text-white" aria-expanded="flase" area-controls="parkdetails" data-toggle="collapse" data-target="#mainLI">Parks Details</button></h2>
                         <ul class="collapse" id="mainLI">
@@ -122,28 +122,28 @@
                         </ul>
                     </div>  
                 </div>
-            </div>
+            </div>-->
         </div> 
         <!--carousel section-->
         <!--Pictures of the Weekly activity -->
-        <div class="container">
+        <div class="container-fluid">
             <div id="my-carousel" class="carousel slide my-4" data-ride="carousel">
                 <div class="carousel-inner" id="mycarouselimg">
                     <div class="carousel-item active">
-                        <img class="d-block w-100" src="./Resources/Images/kids/IMG_0242.jpeg" alt="Kids at Red Rock Pool">
+                        <img class="d-block w-100" src="./Resources/Images/StarTrain/IMG_0403.jpeg" alt="Child with head out of train">
                     </div>
                 
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="./Resources/Images/kids/IMG_1163.jpeg" alt="walking on train tracks">
+                        <img class="d-block w-100" src="./Resources/Images/StarTrain/IMG_0405.jpeg" alt="Child with head out of train">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="./Resources/Images/kids/IMG_1678.jpeg" alt="At top mountians edge">
+                        <img class="d-block w-100" src="./Resources/Images/StarTrain/IMG_0410.jpeg" alt="Sunset over mountian">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="./Resources/Images/kids/IMG_1762.jpeg" alt="kids eating at park">
+                        <img class="d-block w-100" src="./Resources/Images/StarTrain/IMG_0799.jpeg" alt="child smiling">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block  w-100" src="./Resources/Images/kids/IMG_9028.jpeg" alt="kids Eating snacks at grass">
+                        <img class="d-block  w-100" src="./Resources/Images/StarTrain/IMG_0837.jpeg" alt="children holding each other">
                     </div>
                     <a class="carousel-control-prev" href="#my-carousel" data-slide="prev" role="button">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -170,7 +170,10 @@
                     <h3 class="text-center" id="blogtitle">Comments & Questions</h3>
                    <div class="form-group text-center p-4" id="commentsec">
                        <label for="usr">Name:</label>
-                       <textarea for="form-control" rows="1" id="name"></textarea>
+                       <textarea for="form-control" rows="1" id="name"></textarea><br>
+                       <label for="usr">Email</label>
+                       <textarea for="form-control" rows="1" id="email"></textarea><br>
+                       <label for="user">Comments</label>
                        <textarea class="form-control" rows="5" id="comment"></textarea>
                        <button type="button" class="btn btn-dark m-5">Submit</button>
                    </div>
