updated homepage and blog page

--- a/blog.html
+++ b/blog.html
@@ -50,7 +50,7 @@
                 <h1 class="w-100 " id="titlefont">The Blogs</h1>
             </div>
             <div class="row">
-                <div class="col-sm-8" id="theblog">
+                <div class="col-lg-8" id="theblog">
                     <H3 class="text-center blogtitle" id="titlefont">My First Blog</H3>
                     <p class="text-center" id="blogtext">Hello world, My name is Andrew and this is my first blog.  I recently decided 
                         to start a blog about being a dad.  Something I could turn to to express my feelings, experiences, and just every
@@ -71,28 +71,29 @@
                            eating healthy is a big and important part of life. In this blog I will be bringing you guys along with me on this 
                            journey they call father hood. From the ups, downs, ins and outs, the good days, bad days, and everything in-between.</p>
                 </div>
-                <div class="col">
-                    <div class="row  text-center d-block align-content-center" id="blogs">
-                        <h3 id="titlefont">Blogs</h3>
-                        <ol>
-                            <li id="firstBlog">My First Blog</li>
-                            <li id="perfectBraid">The Perfect Braid</li>
-                            <li> the third</li>
-                            <li> the fourth</li>
-                            <li>the fith</li>
-                        </ol>
+                <div class="col blogs">
+                        <div class="row text-center" id="blogs">
+                            <h3 id="titlefont">Blogs</h3>
+                            <ol>
+                                <li id="firstBlog">My First Blog</li>
+                                <li id="perfectBraid">The Perfect Braid</li>
+                                <li> the third</li>
+                                <li> the fourth</li>
+                                <li>the fith</li>
+                            </ol>
+                        </div>
+                        <div class="row text-center" id="theLineUp">
+                            <h3 id="titlefont">The Line Up</h3>
+                            <ol>
+                                <li>StarTrain</li>
+                                <li>The second</li>
+                                <li>The third</li>
+                                <li>The fourth</li>
+                                <li>The fith</li>
+                            </ol>
+                        </div>
                     </div>
-                    <div class="row text-center d-block align-content-center" id="theLineUp">
-                        <h3 id="titlefont">The Line Up</h3>
-                        <ol>
-                            <li>StarTrain</li>
-                            <li>the second</li>
-                            <li> the third</li>
-                            <li> the fourth</li>
-                            <li>the fith</li>
-                        </ol>
-                    </div>
-                </div>
+                
             </div>
         </div>
 
